<resources>
    <string name="app_name">BuddyBook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_view_activity_1">HomeViewActivity_1</string>

    <string-array name="phoneNoTypes">
        <item>Mobile</item>
        <item>Work</item>
        <item>Home</item>
        <item>Main</item>
        <item>Work Fax</item>
        <item>Home Fax</item>
    </string-array>
    <string-array name="emailTypes">
        <item>Work</item>
        <item>Home</item>
        <item>Main</item>
        <item>Work Fax</item>
        <item>Home Fax</item>
    </string-array>
    <string-array name="dateTypes">
        <item>BIRTHDAY</item>
        <item>ANNIVERSARY</item>
        <item>OTHER</item>

    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="drawer_menu1">All Contacts</string>
    <string name="drawer_menu2">Contacts In Activity</string>
    <string name="drawer_menu3">Item 3</string>
    <string name="drawer_menu4">Item 4</string>
    <string name="drawer_menu5">Sync SocialSite Contacts</string>
    <string name="drawer_menu6">Item 6</string>



    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_using_tab_library">UsingTabLibraryActivity</string>
    <string name="title_activity_content_list">ContentListActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="title_activity_view_details">Details</string>
    <string name="title_activity_add_new_contact">AddNewContactActivity</string>
>>>>>>> a049033d6e48c240e9cc744a9b0f432583121a7e
</resources>
