<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--All the items added without any grouping-->

    <item
        android:id="@+id/navigation_item_1"
        android:icon="@drawable/ic_number_0"
        android:title="@string/drawer_menu1" />
    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_number_1"
        android:title="@string/drawer_menu2" />
    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/ic_number_2"
        android:title="@string/drawer_menu3" />
    <item
        android:id="@+id/navigation_item_4"
        android:icon="@drawable/ic_number_3"
        android:title="@string/drawer_menu4" />
    <item
        android:id="@+id/navigation_item_5"
        android:icon="@drawable/ic_number_4"
        android:title="@string/drawer_menu5" />



</menu>